build/log/idf_py_stdout_output_33441
Command: ninja flash
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/chadaya/documents/projects/cpp_projects/esp/esp_test/build/bootloader/esp-idf/esptool_py && /home/chadaya/.espressif/python_env/idf5.5_py3.12_env/bin/python /home/chadaya/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/chadaya/documents/projects/cpp_projects/esp/esp_test/build/bootloader/bootloader.bin
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj 
/home/chadaya/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/chadaya/documents/projects/cpp_projects/esp/esp_test/build/config -I/home/chadaya/documents/projects/cpp_projects/esp/esp_test/main -I/home/chadaya/esp/esp-idf/components/newlib/platform_include -I/home/chadaya/esp/esp-idf/components/freertos/config/include -I/home/chadaya/esp/esp-idf/components/freertos/config/include/freertos -I/home/chadaya/esp/esp-idf/components/freertos/config/xtensa/include -I/home/chadaya/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/chadaya/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/chadaya/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/chadaya/esp/esp-idf/components/freertos/esp_additions/include -I/home/chadaya/esp/esp-idf/components/esp_hw_support/include -I/home/chadaya/esp/esp-idf/components/esp_hw_support/include/soc -I/home/chadaya/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/chadaya/esp/esp-idf/components/esp_hw_support/dma/include -I/home/chadaya/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/chadaya/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/chadaya/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/chadaya/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/chadaya/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/chadaya/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/chadaya/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/chadaya/esp/esp-idf/components/heap/include -I/home/chadaya/esp/esp-idf/components/heap/tlsf -I/home/chadaya/esp/esp-idf/components/log/include -I/home/chadaya/esp/esp-idf/components/soc/include -I/home/chadaya/esp/esp-idf/components/soc/esp32 -I/home/chadaya/esp/esp-idf/components/soc/esp32/include -I/home/chadaya/esp/esp-idf/components/soc/esp32/register -I/home/chadaya/esp/esp-idf/components/hal/platform_port/include -I/home/chadaya/esp/esp-idf/components/hal/esp32/include -I/home/chadaya/esp/esp-idf/components/hal/include -I/home/chadaya/esp/esp-idf/components/esp_rom/include -I/home/chadaya/esp/esp-idf/components/esp_rom/esp32/include -I/home/chadaya/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/chadaya/esp/esp-idf/components/esp_rom/esp32 -I/home/chadaya/esp/esp-idf/components/esp_common/include -I/home/chadaya/esp/esp-idf/components/esp_system/include -I/home/chadaya/esp/esp-idf/components/esp_system/port/soc -I/home/chadaya/esp/esp-idf/components/esp_system/port/include/private -I/home/chadaya/esp/esp-idf/components/xtensa/esp32/include -I/home/chadaya/esp/esp-idf/components/xtensa/include -I/home/chadaya/esp/esp-idf/components/xtensa/deprecated_include -I/home/chadaya/esp/esp-idf/components/spi_flash/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/chadaya/documents/projects/cpp_projects/esp/esp_test=. -fmacro-prefix-map=/home/chadaya/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -fuse-cxa-atexit -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -c /home/chadaya/documents/projects/cpp_projects/esp/esp_test/main/main.cpp
/home/chadaya/documents/projects/cpp_projects/esp/esp_test/main/main.cpp: In function 'void app_main()':
/home/chadaya/documents/projects/cpp_projects/esp/esp_test/main/main.cpp:7:39: error: 'esp_get_free_head_size' was not declared in this scope; did you mean 'esp_get_free_heap_size'?
    7 |         std::cout << "Free heap: " << esp_get_free_head_size() << std::endl;
      |                                       ^~~~~~~~~~~~~~~~~~~~~~
      |                                       esp_get_free_heap_size
ninja: build stopped: subcommand failed.
